# aiav

./: .env  .gitignore  Cargo.toml  Readme.md  create_eicar.py  create_suspicious_file.py  create_yara_test_file.py  dummy.py  hash_checker.py  tree.txt
ai-engine/: pyproject.toml  requirements.txt
ai-engine/ai_engine/: feature_extractor.py  main.py  predictor.py  train_model.py
ai-engine/aiav_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloud-services/: Cargo.toml
config/: default.toml
config/signatures/: adware_hosts.txt.meta.json  malware_patterns.yar  tracker_hosts.txt.meta.json  virus-signatures.db
core/: Cargo.toml  build.rs
core/config/: development.toml
core/src/: api.rs  lib.rs  main.rs
core/src/config/: mod.rs  settings.rs
core/src/detection/: ai.rs  mod.rs  signature.rs  watcher.rs  web_security.rs
core/src/engine/: file_monitor.rs  mod.rs  mod.rs.tmp  quarantine.rs  scanner.rs
core/src/error/: mod.rs  types.rs
core/src/tests/: lib.rs
core/src/tests/unit/: detection_tests.rs
core/src/utils/: crypto.rs  logging.rs
frontend/: CMakeLists.txt
frontend/resources/: resources.qrc
frontend/resources/styles/: dark_theme.qss
frontend/src/: main.cpp  mainwindow.cpp  mainwindow.h
frontend/src/api/: api_client.cpp  api_client.h
frontend/src/delegates/: quarantine_item_delegate.cpp  quarantine_item_delegate.h
frontend/src/pages/: dashboard_page.cpp  dashboard_page.h  protection_page.cpp  protection_page.h  quarantine_page.cpp  quarantine_page.h  scan_page.cpp  scan_page.h  settings_page.cpp  settings_page.h
frontend/src/widgets/: commandcore_widget.cpp  commandcore_widget.h  futuristic_dropzone.cpp  futuristic_dropzone.h  navigationbar.cpp  navigationbar.h  shield_widget.cpp  shield_widget.h  status_card_widget.cpp  status_card_widget.h
logs/: aiav_core.log.2025-06-20  aiav_core.log.2025-06-22  aiav_core.log.2025-06-23  aiav_core.log.2025-06-24  aiav_core.log.2025-06-25  aiav_core.log.2025-06-26  aiav_core.log.2025-06-27  aiav_core.log.2025-06-28
system-integration/: CMakeLists.txt  Cargo.toml
system-integration/include/: file_watcher.h
system-integration/src/: dummy.cpp  lib.rs
system-integration/src/windows/: file_watcher.cpp  file_watcher.rs  mod.rs
