[package]
name = "aiav_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[dependencies]
yara = { version = "0.30", default-features = false,features = ["bundled-4_5_2","vendored","yara-static"] }

anyhow      = "1"
async-trait = "0.1"
thiserror   = "2.0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# --- Eklenenler burada başlıyor ---
tokio       = { version = "1", features = ["full"] }
sha2        = "0.10"
rayon       = "1.10"
reqwest     = { version = "0.12", features = ["json","gzip"] }
walkdir     = "2.5"
fs_extra    = "1.3"
chrono      = "0.4"
futures = "0.3"
notify = "8"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
time-fmt = "0.3.8"
axum = { version = "0.8.4", features = ["json", "ws", "macros"] }
once_cell = "1.19"

system-integration = { path = "../system-integration" }

tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "registry"] }

tempfile  = "3"
url = "2.5.0"
# --- Eklenenler burada bitiyor ---


