[package]
name    = "system-integration"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }
notify  = { version = "6.1.1", features = ["crossbeam-channel"] } # <- sadece bu yeter
tracing = "0.1"
anyhow  = "1"
